js/js.translator/testData/incremental/invalidation/splitJoinModule/lib1-b/l1b.3.kt
inline fun fooB() = 4
